tests/fixtures/nupm/rejected/missing-required-keys/unnamed/mod.nu
export def main [] { "missing name key in metadata" }
